--- a/secrets.properties
+++ b/secrets.properties
@@ -1,2 +1,3 @@
 MAPS_API_KEY=AIzaSyALFDATsBt2NjhvBVCcyMsiG2N4zHHL8-k
 OPEN_WEATHER_API_KEY = "834845be9b921dcd6a5bff1a3d9f2fee"
+GEOAPIFY_API_KEY = "7bd83b59c1274683909b4dadb1e1bb0f"
